bin_PROGRAMS = aklo
aklo_SOURCES =\
	cpp.cc\
	cpp.h\
	etc.cc\
	etc.h\
	keywords.cc\
	keywords.h\
	main.cc\
	main.h\
	map.h\
	mem.cc\
	mem.h\
	parsing.cc\
	parsing.h\
	script.cc\
	script.h\
	set.h\
	ssa.cc\
	ssa.h\
	sym.cc\
	sym.h\
	vec.h
AM_CXXFLAGS = -fno-exceptions -fno-rtti -std=c++11
EXTRA_DIST =\
	LICENSE\
	README.md
